test/error/oppow.luau
local x = 1
local y = "hello"

print(x ^ y)
